--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -206,6 +206,11 @@ footer a{
 
 
 @media (max-width: 768px) {
+
+.menu-toggle{
+    display:block;
+   }
+  
   .hero a {
     display: inline-block;
     margin-bottom: 12px;  /* small gap */
