--- a/portfolio/betterhalf.ai/index.html
+++ b/portfolio/betterhalf.ai/index.html
@@ -155,30 +155,34 @@ nav.active{
 <body>
 
   <header>
-    <h1>
-      <a href="/" style="
-        font-size: 24px;
-        font-weight: bold;
-        background: linear-gradient(90deg, #00f, #0ff);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-decoration: none;
-      ">
-        Minds Of Brands
-      </a>
-    </h1>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/product/">Product</a></li>
-        <li><a href="/about/">About Us</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/blog/">Blogs</a></li>
-        <li><a href="/contactus/">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>
+    <a href="/" style="
+      font-size: 24px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-decoration: none;">
+      Minds Of Brands
+    </a>
+  </h1>
+
+  <!-- HAMBURGER BUTTON -->
+  <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+  <!-- IMPORTANT: ID ADDED -->
+  <nav id="navMenu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/services/">Services</a></li>
+      <li><a href="/product/">Product</a></li>
+      <li><a href="/about/">About Us</a></li>
+      <li><a href="/portfolio/">Portfolio</a></li>
+      <li><a href="/blog/">Blogs</a></li>
+      <li><a href="/contactus/">Contact</a></li>
+    </ul>
+  </nav>
+</header>
 
   <main class="container">
 
