--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -111,8 +111,8 @@ nav ul li a:hover{
 
 .btn{
   display:inline-block;
-  background:linear-gradient(90deg,#00f,#0ff);
-  color:#000;
+  background:linear-gradient(90deg,#8000ff,#ff00cc);
+  color:#fff;
   padding:10px 18px;
   border-radius:6px;
   text-decoration:none;
@@ -121,8 +121,8 @@ nav ul li a:hover{
 
 .btn.secondary{
   background:transparent;
-  border:1px solid #0ff;
-  color:#0ff;
+  border:1px solid #ff00cc;
+  color:#ff00cc;
   margin-left:10px;
 }
 
@@ -137,7 +137,7 @@ nav ul li a:hover{
 .section h2{
   font-size:24px;
   margin-bottom:15px;
-  background:linear-gradient(90deg,#00f,#0ff);
+  background:linear-gradient(90deg,#8000ff,#ff00cc);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
