--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -111,19 +111,12 @@ nav ul li a:hover{
 
 .btn{
   display:inline-block;
-  background:linear-gradient(90deg,#8000ff,#ff00cc);
-  color:#fff;
+  background:linear-gradient(90deg,#00f,#0ff);
+  color:#000;
   padding:10px 18px;
   border-radius:6px;
   text-decoration:none;
   font-weight:bold;
-}
-
-.btn.secondary{
-  background:transparent;
-  border:1px solid #ff00cc;
-  color:#ff00cc;
-  margin-left:10px;
 }
 
 /* ========== CONTENT ========== */
