--- a/portfolio/beatxp/index.html
+++ b/portfolio/beatxp/index.html
@@ -130,7 +130,7 @@ nav ul li a:hover{
 .section h2{
   font-size:24px;
   margin-bottom:15px;
-  background:linear-gradient(90deg,#8000ff,#ff00cc);
+  background:linear-gradient(90deg,#00f,#0ff);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
