--- a/portfolio/betterhalf.ai/index.html
+++ b/portfolio/betterhalf.ai/index.html
@@ -14,13 +14,12 @@
 
   <style>
     :root{
-      --bg:#000;
-      --muted:#bdbdbd;
-      --accent1:#00f;
-      --accent2:#0ff;
-      --card-bg:#0a0a0a;
-      --accent-cta:#8000ff;
-    }
+  --bg:#000;
+  --muted:#bdbdbd;
+  --accent1:#0066ff;
+  --accent2:#00e0ff;
+  --card-bg:#0a0a0a;
+}
     *{box-sizing:border-box;margin:0;padding:0}
     body{
       font-family: Arial, Helvetica, sans-serif;
@@ -73,10 +72,33 @@ nav.active{
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;}
     .hero p.lead{color:var(--muted);font-size:16px;margin-bottom:12px}
     .meta{display:flex;gap:12px;color:var(--muted);font-size:14px;margin-bottom:10px}
-    .hero-cta{margin-top:8px}
-    .btn{background:var(--accent-cta);color:#fff;padding:12px 20px;border-radius:10px;
-      text-decoration:none;font-weight:700;display:inline-block}
-    .btn.secondary{background:transparent;border:1px solid rgba(255,255,255,0.06)}
+   .hero-cta{margin-top:8px}
+
+.btn{
+  background: linear-gradient(90deg, var(--accent1), var(--accent2));
+  color:#000;
+  padding:12px 20px;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:700;
+  display:inline-block;
+  transition:0.3s ease;
+}
+
+.btn:hover{
+  opacity:0.9;
+}
+
+.btn.secondary{
+  background:transparent;
+  border:1px solid var(--accent2);
+  color:var(--accent2);
+}
+
+.btn.secondary:hover{
+  background:var(--accent2);
+  color:#000;
+}
 
     .grid{display:grid;grid-template-columns:1fr 360px;gap:28px;margin-top:28px}
     @media(max-width:980px){.grid{grid-template-columns:1fr}.hero{flex-direction:column}.hero h1{font-size:28px}}
