--- a/portfolio/betterhalf.ai/index.html
+++ b/portfolio/betterhalf.ai/index.html
@@ -89,17 +89,6 @@ nav.active{
   opacity:0.9;
 }
 
-.btn.secondary{
-  background:transparent;
-  border:1px solid var(--accent2);
-  color:var(--accent2);
-}
-
-.btn.secondary:hover{
-  background:var(--accent2);
-  color:#000;
-}
-
     .grid{display:grid;grid-template-columns:1fr 360px;gap:28px;margin-top:28px}
     @media(max-width:980px){.grid{grid-template-columns:1fr}.hero{flex-direction:column}.hero h1{font-size:28px}}
 
@@ -223,7 +212,7 @@ nav.active{
 
         <div class="hero-cta">
           <a class="btn" href="/contactus/">Work with us</a>
-          <a class="btn secondary" href="/portfolio/">See more case studies</a>
+          <a class="btn" href="/portfolio/">See more case studies</a>
         </div>
       </div>
 
