--- a/portfolio/scribd/index.html
+++ b/portfolio/scribd/index.html
@@ -14,13 +14,13 @@
 
   <style>
     :root{
-      --bg:#000;
-      --muted:#bdbdbd;
-      --accent1:#00f;
-      --accent2:#0ff;
-      --card-bg:#0a0a0a;
-      --accent-cta:#8000ff;
-    }
+  --bg:#000;
+  --muted:#bdbdbd;
+  --accent1:#0066ff;
+  --accent2:#00c2ff;
+  --card-bg:#0a0a0a;
+  --accent-cta:linear-gradient(90deg,var(--accent1),var(--accent2));
+}
     *{box-sizing:border-box;margin:0;padding:0}
     body{
       font-family: Arial, Helvetica, sans-serif;
@@ -72,7 +72,20 @@ nav.active{
     .hero p.lead{color:var(--muted);font-size:16px;margin-bottom:12px}
     .meta{display:flex;gap:12px;color:var(--muted);font-size:14px;margin-bottom:10px}
     .hero-cta{margin-top:8px}
-    .btn{background:var(--accent-cta);color:#fff;padding:12px 20px;border-radius:10px;text-decoration:none;font-weight:700;display:inline-block}
+    .btn{
+  background: var(--accent-cta);
+  color:#000;
+  padding:12px 20px;
+  border-radius:10px;
+  text-decoration:none;
+  font-weight:700;
+  display:inline-block;
+  transition:0.3s ease;
+}
+
+.btn:hover{
+  opacity:0.9;
+}
     .btn.secondary{background:transparent;border:1px solid rgba(255,255,255,0.06)}
 
     /* Grid layout for content */
