--- a/portfolio/scribd/index.html
+++ b/portfolio/scribd/index.html
@@ -216,7 +216,7 @@ nav ul li{
 
         <div class="hero-cta">
           <a class="btn" href="/contactus/">Work with us</a>
-          <a class="btn secondary" href="/portfolio/">See more case studies</a>
+        <a class="btn" href="/portfolio/">See more case studies</a>
         </div>
       </div>
 
