--- a/contactus/index.html
+++ b/contactus/index.html
@@ -198,6 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <h2>Contact Us</h2>
     <form action="https://formspree.io/f/xwpqdlpb" method="POST">
+      <input type="hidden" name="_next" value="https://mindsofbrands.com/thank-you/">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="_replyto" placeholder="Your Email" required>
       <input type="text" name="subject" placeholder="Subject" required>
