--- a/contactus/index.html
+++ b/contactus/index.html
@@ -197,8 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- CONTACT FORM -->
   <div class="container">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/xwpqdlpb" method="POST">
-      <input type="hidden" name="_next" value="https://mindsofbrands.com/thank-you/">
+<form action="https://formspree.io/f/xwpqdlpb" method="POST" id="contact-form">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="_replyto" placeholder="Your Email" required>
       <input type="text" name="subject" placeholder="Subject" required>
@@ -229,7 +228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="../contactus/">Contact</a>
     </p>
   </footer>
-
+  
 <script>
 function toggleMenu() {
   const menu = document.getElementById("navMenu");
@@ -245,6 +244,47 @@ document.querySelectorAll("#navMenu a").forEach(link => {
       document.getElementById("navMenu").style.display = "none";
     }
   });
+});
+</script>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("navMenu");
+  if (window.innerWidth <= 768) {
+    menu.style.display = (menu.style.display === "block") ? "none" : "block";
+  }
+}
+
+document.querySelectorAll("#navMenu a").forEach(link => {
+  link.addEventListener("click", function () {
+    if (window.innerWidth <= 768) {
+      document.getElementById("navMenu").style.display = "none";
+    }
+  });
+});
+</script>
+
+<script>
+const form = document.getElementById("contact-form");
+
+form.addEventListener("submit", async function(e) {
+  e.preventDefault();
+
+  const data = new FormData(form);
+
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: {
+      'Accept': 'application/json'
+    }
+  });
+
+  if (response.ok) {
+    window.location.href = "https://mindsofbrands.com/thank-you/";
+  } else {
+    alert("Oops! Something went wrong.");
+  }
 });
 </script>
   
